--- a/web/src/components/Header/header.scss
+++ b/web/src/components/Header/header.scss
@@ -24,7 +24,7 @@
     position: absolute;
     color: black;
     background-color: white;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
     width: 200px;
     padding: 1%;
     > a {
@@ -42,7 +42,6 @@
   }
 
   &:hover {
-    // opacity: 0;
     > .hover-options {
       display: flex;
       height: fit-content;
@@ -54,35 +53,33 @@
 
 .navbar {
   background-color: $brand-color2;
-  opacity: 0.9;
+  opacity: 0.95;
   z-index: 999;
+  position: relative; // important for lightrope positioning
   @media (max-width: 768px) {
     --bs-navbar-padding-y: 0rem;
   }
+
   .sub-navbar {
     padding-top: 2%;
     padding-bottom: 0%;
   }
-}
 
-.navbar-contents {
-  opacity: 0;
-  transition: opacity 0.6s ease-in;
-}
+  .navbar-contents {
+    opacity: 0;
+    transition: opacity 0.6s ease-in;
+  }
 
-/* When animate class is added, show and animate contents */
-.navbar.animate .navbar-contents {
-  opacity: 1;
-  -webkit-animation-name: fadeInRight;
-  animation-name: fadeInRight;
-  animation-duration: 600ms;
-  animation-timing-function: ease-in;
+  &.animate .navbar-contents {
+    opacity: 1;
+    animation-name: fadeInRight;
+    animation-duration: 0.6s;
+    animation-timing-function: ease-in;
+  }
 }
 
 .navbar > .container {
-  -webkit-transform-origin: center;
   transform-origin: center;
-
   line-height: 1rem;
 
   > .navbar-collapse > .navbar-nav > .row {
@@ -117,9 +114,11 @@
       &:hover > .nav-link {
         color: $brand-color;
       }
+
       @include screen-tablet-max {
         border-bottom: 1px solid white;
       }
+
       &.show {
         > a {
           padding-bottom: 0;
@@ -174,18 +173,14 @@
   }
 }
 
-/*Animation*/
-
+/* Animation */
 @keyframes fadeInRight {
   from {
     opacity: 0;
-    -webkit-transform: translate3d(100%, 0, 0);
     transform: translate3d(100%, 0, 0);
   }
-
   to {
     opacity: 1;
-    -webkit-transform: none;
     transform: none;
   }
 }
@@ -198,6 +193,8 @@
     opacity: 1;
   }
 }
+
+/* Dropdown menu fixes */
 .dropdown-menu {
   min-width: auto !important;
   font-size: 12px;
@@ -205,4 +202,47 @@
 
 #lang-nav-dropdown {
   width: fit-content;
+}
+.lightrope-wrapper {
+  position: absolute;
+  top: 100%;       // top of lights at bottom of navbar
+  left: 0;
+  width: 100%;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  pointer-events: none;
+  z-index: -1;     // make lights low
+}
+
+.lightrope {
+  display: flex;
+  gap: 20px;       // spacing between globes
+}
+.globe {
+  width: 12px;
+  height: 28px;
+  border-radius: 50%;
+  background: red; // default color
+  box-shadow: 0 5px 10px red;
+
+}
+
+// Cycle colors: 1 = red, 2 = white
+.globe:nth-child(2n + 1) {
+  background: red;
+  box-shadow: 0 5px 10px red;
+ 
+}
+
+.globe:nth-child(2n) {
+  background: white;
+  box-shadow: 0 5px 10px white;
+  
+}
+
+@keyframes flash {
+  0%   { opacity: 1; transform: scale(1); }
+  50%  { opacity: 0.4; transform: scale(0.8); }
+  100% { opacity: 1; transform: scale(1); }
 }
