--- a/web/src/pages/index.scss
+++ b/web/src/pages/index.scss
@@ -48,3 +48,12 @@
     max-width: 600px; /* Adjust this value based on your design needs */
   }
 }
+
+.snow {
+  position: fixed;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 9999;
+}
