--- a/web/src/pages/about/about.module.css
+++ b/web/src/pages/about/about.module.css
@@ -20,7 +20,11 @@
 }
 
 .about-header {
-  background-image: url(../../images/about-page-bg.jpg);
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0.6),
+      rgba(255, 255, 255, 0.6)
+    ),
+    url(../../images/about-page-bg3.jpg);
   background-repeat: no-repeat;
   background-position: center; /* Center the background */
   background-size: cover;
